swiftc-b3c9dbeb9f/crashes/asserts/assert_SourceMgr.cpp:299_1.swift.err.txt
assert_SourceMgr.cpp:299_1.swift:11:1: error: found an unexpected second identifier in function declaration; is there an accidental break?
f
^
assert_SourceMgr.cpp:299_1.swift:11:1: note: join the identifiers together
swift: /home/hongxu/FOT/SWIFT/llvm/lib/Support/SourceMgr.cpp:299: void buildFixItLine(std::string &, std::string &, ArrayRef<llvm::SMFixIt>, ArrayRef<char>): Assertion `(size_t)sys::locale::columnWidth(I->getText()) == I->getText().size()' failed.
#0 0x000000000088b4d1 __interceptor_backtrace.part.117 (/home/hongxu/FOT/SWIFT/build/Ninja-RelWithDebInfoAssert+asan/swift-linux-x86_64/bin/swift+0x88b4d1)
#1 0x000000001a25eaad llvm::sys::PrintStackTrace(llvm::raw_ostream&) /home/hongxu/FOT/SWIFT/llvm/lib/Support/Unix/Signals.inc:487:13
#2 0x000000001a25eaad PrintStackTraceSignalHandler(void*) /home/hongxu/FOT/SWIFT/llvm/lib/Support/Unix/Signals.inc:550:0
#3 0x000000001a25046a llvm::sys::RunSignalHandlers() /home/hongxu/FOT/SWIFT/llvm/lib/Support/Signals.cpp:68:18
#4 0x000000001a25f49f SignalHandler(int) /home/hongxu/FOT/SWIFT/llvm/lib/Support/Unix/Signals.inc:340:3
#5 0x00007fdb23b0b890 __restore_rt (/lib/x86_64-linux-gnu/libpthread.so.0+0x12890)
#6 0x00007fdb21f6ee97 gsignal /build/glibc-OTsEL5/glibc-2.27/signal/../sysdeps/unix/sysv/linux/raise.c:51:0
#7 0x00007fdb21f70801 abort /build/glibc-OTsEL5/glibc-2.27/stdlib/abort.c:81:0
#8 0x00007fdb21f6039a __assert_fail_base /build/glibc-OTsEL5/glibc-2.27/assert/assert.c:89:0
#9 0x00007fdb21f60412 (/lib/x86_64-linux-gnu/libc.so.6+0x30412)
#10 0x000000001a01fafc std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::size() const /usr/bin/../lib/gcc/x86_64-linux-gnu/8.1.0/../../../../include/c++/8.1.0/bits/basic_string.h:912:16
#11 0x000000001a01fafc buildFixItLine(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, llvm::ArrayRef<llvm::SMFixIt>, llvm::ArrayRef<char>) /home/hongxu/FOT/SWIFT/llvm/lib/Support/SourceMgr.cpp:303:0
#12 0x000000001a01fafc llvm::SMDiagnostic::print(char const*, llvm::raw_ostream&, bool, bool) const /home/hongxu/FOT/SWIFT/llvm/lib/Support/SourceMgr.cpp:433:0
#13 0x0000000005cc921d llvm::SMDiagnostic::~SMDiagnostic() /home/hongxu/FOT/SWIFT/llvm/include/llvm/Support/SourceMgr.h:233:7
#14 0x0000000005cc921d swift::PrintingDiagnosticConsumer::handleDiagnostic(swift::SourceManager&, swift::SourceLoc, swift::DiagnosticKind, llvm::StringRef, llvm::ArrayRef<swift::DiagnosticArgument>, swift::DiagnosticInfo const&) /home/hongxu/FOT/SWIFT/swift/lib/Frontend/PrintingDiagnosticConsumer.cpp:117:0
#15 0x0000000008aa3d05 swift::DiagnosticEngine::emitDiagnostic(swift::Diagnostic const&) /home/hongxu/FOT/SWIFT/swift/lib/AST/DiagnosticEngine.cpp:824:15
#16 0x0000000008a8e2bc llvm::Optional<swift::Diagnostic>::reset() /home/hongxu/FOT/SWIFT/llvm/include/llvm/ADT/Optional.h:113:9
#17 0x0000000008a8e2bc swift::DiagnosticEngine::flushActiveDiagnostic() /home/hongxu/FOT/SWIFT/swift/lib/AST/DiagnosticEngine.cpp:689:0
#18 0x0000000008280765 swift::Parser::diagnoseConsecutiveIDs(llvm::StringRef, swift::SourceLoc, llvm::StringRef) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:3099:3
#19 0x00000000082b8bcd parseIdentifierDeclName(swift::Parser&, swift::Identifier&, swift::SourceLoc&, llvm::StringRef, swift::tok, swift::tok, swift::tok, swift::tok, TokenProperty) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:3002:9
#20 0x000000000826c040 parseIdentifierDeclName(swift::Parser&, swift::Identifier&, swift::SourceLoc&, llvm::StringRef, swift::tok, swift::tok, swift::tok, TokenProperty) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:3080:10
#21 0x000000000826c040 swift::Parser::parseDeclFunc(swift::SourceLoc, swift::StaticSpellingKind, swift::OptionSet<swift::Parser::ParseDeclFlags, unsigned int>, swift::DeclAttributes&) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:5244:0
#22 0x000000000821d6d0 llvm::PointerIntPairInfo<swift::FuncDecl*, 2u, llvm::PointerLikeTypeTraits<swift::FuncDecl*> >::getPointer(long) /home/hongxu/FOT/SWIFT/llvm/include/llvm/ADT/PointerIntPair.h:152:40
#23 0x000000000821d6d0 llvm::PointerIntPair<swift::FuncDecl*, 2u, unsigned int, llvm::PointerLikeTypeTraits<swift::FuncDecl*>, llvm::PointerIntPairInfo<swift::FuncDecl*, 2u, llvm::PointerLikeTypeTraits<swift::FuncDecl*> > >::getPointer() const /home/hongxu/FOT/SWIFT/llvm/include/llvm/ADT/PointerIntPair.h:56:0
#24 0x000000000821d6d0 swift::ParserResult<swift::Decl>::ParserResult<swift::FuncDecl, void>(swift::ParserResult<swift::FuncDecl>) /home/hongxu/FOT/SWIFT/swift/include/swift/Parse/ParserResult.h:60:0
#25 0x000000000821d6d0 swift::Parser::parseDecl(swift::OptionSet<swift::Parser::ParseDeclFlags, unsigned int>, llvm::function_ref<void (swift::Decl*)>) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:2614:0
#26 0x0000000008282e58 swift::Parser::parseDeclItem(bool&, swift::OptionSet<swift::Parser::ParseDeclFlags, unsigned int>, llvm::function_ref<void (swift::Decl*)>) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:3146:12
#27 0x00000000082885aa swift::Token::is(swift::tok) const /home/hongxu/FOT/SWIFT/swift/include/swift/Parse/Token.h:76:33
#28 0x00000000082885aa bool swift::Token::isAny<swift::tok, swift::tok>(swift::tok, swift::tok, swift::tok, swift::tok) const /home/hongxu/FOT/SWIFT/swift/include/swift/Parse/Token.h:86:0
#29 0x00000000082885aa swift::Parser::parseDeclList(swift::SourceLoc, swift::SourceLoc&, swift::Diag<>, swift::OptionSet<swift::Parser::ParseDeclFlags, unsigned int>, llvm::function_ref<void (swift::Decl*)>) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:3170:0
#30 0x0000000008251287 swift::Parser::parseDeclStruct(swift::OptionSet<swift::Parser::ParseDeclFlags, unsigned int>, swift::DeclAttributes&) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:5783:9
#31 0x000000000821d92a swift::Parser::parseDecl(swift::OptionSet<swift::Parser::ParseDeclFlags, unsigned int>, llvm::function_ref<void (swift::Decl*)>) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:2589:18
#32 0x00000000083e506c swift::Parser::parseBraceItems(llvm::SmallVectorImpl<swift::ASTNode>&, swift::BraceItemListKind, swift::BraceItemListKind) /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseStmt.cpp:378:11
#33 0x00000000081c6cf1 swift::Token::is(swift::tok) const /home/hongxu/FOT/SWIFT/swift/include/swift/Parse/Token.h:76:33
#34 0x00000000081c6cf1 swift::Parser::parseTopLevel() /home/hongxu/FOT/SWIFT/swift/lib/Parse/ParseDecl.cpp:247:0
#35 0x00000000060e5312 swift::Token::is(swift::tok) const /home/hongxu/FOT/SWIFT/swift/include/swift/Parse/Token.h:76:33
#36 0x00000000060e5312 swift::parseIntoSourceFile(swift::SourceFile&, unsigned int, bool*, swift::SILParserState*, swift::PersistentParserState*, swift::DelayedParsingCallbacks*) /home/hongxu/FOT/SWIFT/swift/lib/ParseSIL/ParseSIL.cpp:126:0
#37 0x0000000005c62001 swift::CompilerInstance::performParseOnly(bool) /home/hongxu/FOT/SWIFT/swift/lib/Frontend/Frontend.cpp:968:15
#38 0x0000000000b9219e performCompile(swift::CompilerInstance&, swift::CompilerInvocation&, llvm::ArrayRef<char const*>, int&, swift::FrontendObserver*, swift::UnifiedStatsReporter*) /home/hongxu/FOT/SWIFT/swift/lib/FrontendTool/FrontendTool.cpp:918:14
#39 0x0000000000b83c4f swift::performFrontend(llvm::ArrayRef<char const*>, char const*, void*, swift::FrontendObserver*) /home/hongxu/FOT/SWIFT/swift/lib/FrontendTool/FrontendTool.cpp:1857:5
#40 0x0000000000915c59 run_driver(llvm::StringRef, llvm::ArrayRef<char const*>) /home/hongxu/FOT/SWIFT/swift/tools/driver/driver.cpp:122:14
#41 0x0000000000910973 main /home/hongxu/FOT/SWIFT/swift/tools/driver/driver.cpp:251:12
#42 0x00007fdb21f51b97 __libc_start_main /build/glibc-OTsEL5/glibc-2.27/csu/../csu/libc-start.c:344:0
#43 0x0000000000808efa _start (/home/hongxu/FOT/SWIFT/build/Ninja-RelWithDebInfoAssert+asan/swift-linux-x86_64/bin/swift+0x808efa)
Stack dump:
0.	Program arguments: /home/hongxu/FOT/SWIFT/build/Ninja-RelWithDebInfoAssert+asan/swift-linux-x86_64/bin/swift -frontend -parse -primary-file assert_SourceMgr.cpp:299_1.swift -target x86_64-unknown-linux-gnu -disable-objc-interop -module-name main 
1.	With parser at source location: assert_SourceMgr.cpp:299_1.swift:12:1
